  run a command and evaluate its output.
  (Jérémie Dimino, review by David Allsopp)

- #9402: Remove `sudo:false` from .travis.yml
  (Hikaru Yoshimura)

- #9414: testsuite, ocamltest: keep test artifacts only on failure.
  Use KEEP_TEST_DIR_ON_SUCCESS=1 to keep all artifacts.
  (Gabriel Scherer, review by Sébastien Hinderer)

### Manual and documentation:

- #9141: beginning of the ocamltest reference manual
  (Sébastien Hinderer, review by Gabriel Scherer and Thomas Refis)

- #9255, #9300: reference chapter, split the expression grammar
  (Florian Angeletti, report by Harrison Ainsworth, review by Gabriel Scherer)

- #9325: documented base case for `List.for_all` and `List.exists`
  (Glenn Slotte, review by Florian Angeletti)

- #9403: added a description for warning 67 and added a "." at the end of
  warnings for consistency.
  (Muskan Garg, review by Gabriel Scherer and Florian Angeletti)

### Compiler user-interface and warnings:

- GPR#1664: make -output-complete-obj link the runtime native c libraries when
  building shared libraries like `-output-obj`.
  (Florian Angeletti, review by Nicolás Ojeda Bär)

* #7678, #8631: ocamlc -c and ocamlopt -c pass same switches to the C
  compiler when compiling .c files (in particular, this means ocamlopt
  passes -fPIC on systems requiring it for shared library support).
  (David Allsopp, report by Daniel Bünzli, review by Sébastien Hinderer)

- #9074: reworded error message for non-regular structural types
  (Florian Angeletti, review by Jacques Garrigue and Leo White,
   report by Chas Emerick)

- #8938: Extend ocamlopt option "-stop-after" to handle "scheduling" argument.
  (Greta Yorsh, review by Florian Angeletti and Sébastien Hinderer)

- #8945, #9086: Fix toplevel show directive to work with constructors
  (Simon Parry, review by Gabriel Scherer, Jeremy Yallop,
  Alain Frisch, Florian Angeletti)

- #9107: improved error message for exceptions in module signature errors